# proiectfinaloop

FinalProject/: CMakeLists.txt  FileRepository.cpp  FileRepository.h  Proiect final.cpp  Proiect final.vcxproj  Proiect final.vcxproj.filters  Repository.cpp  Repository.h  Resources.qrc  Song.cpp  Song.h  SongController.cpp  SongController.h  SongException.cpp  SongException.h  cd.rc  file_repository_test.h  repository_test.h  song_controller_test.h  widget.cpp
build-FinalProject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-FinalProject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-0d9d7efa4434c4fed5d8.json  directory-.-Debug-89247962b46825ee4415.json  index-2023-06-08T06-19-27-0615.json  target-FinalProject-Debug-786230f94f8099a0b7b3.json  target-FinalProject_autogen_timestamp_deps-Debug-c25636f06c606817613c.json
build-FinalProject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-0bd408af814cd42dd8de.json  cmakeFiles-v1-bf3869b75c84a008abd5.json  codemodel-v2-009b070c7e452677aa80.json  directory-.-Debug-25f0cb81faf4dc402466.json  index-2023-06-06T14-11-33-0623.json  target-FinalProject-Debug-cba743994b76f762acce.json  target-FinalProject_autogen-Debug-9f1d6065131caa5881e4.json
build-FinalProject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-FinalProject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/FinalProject_autogen/: deps
build-FinalProject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/FinalProject_autogen/EWIEGA46WW/: moc_widget.cpp  moc_widget.cpp.d
build-FinalProject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/cd.rc_autogen/: deps
build-FinalProject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/cd_autogen/: deps
